--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ google-resumable-media==2.2.1
 googleapis-common-protos==1.54.0
 grpcio==1.43.0
 grpcio-status==1.43.0
+gunicorn==20.1.0
 h11==0.13.0
 httplib2==0.20.2
 idna==3.3
